# my-ai-reviewer

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.yml
.agents/: backend.skill.md  ci.skill.md  frontend.skill.md  project-context.md  prompt.skill.md  review.skill.md  testing.skill.md  workflow.md
backend/: .env.example  celery_app.py  config.py  main.py  pyproject.toml
backend/agents/evaluation_agent/: __init__.py
backend/agents/followup_agent/: __init__.py
backend/agents/question_agent/: __init__.py
backend/agents/report_agent/: __init__.py
backend/api/v1/: interview.py  resume.py  router.py  schemas.py  settings.py
backend/application/: interview_service.py  llm_config_service.py
backend/application/resume_service/: __init__.py
backend/domain/interview/: enums.py  schemas.py
backend/domain/resume/: design.md  enums.py  exceptions.py  parse.md  schemas.py  services.py
backend/infrastructure/classifiers/: __init__.py  base.py  rule_classifier.py
backend/infrastructure/crypto/: encryption.py
backend/infrastructure/db/: __init__.py  database.py  models.py  repositories.py
backend/infrastructure/evaluators/: __init__.py  base.py  llm_evaluator.py
backend/infrastructure/extractors/: __init__.py  base.py  llm_extractor.py
backend/infrastructure/llm/: __init__.py  gateway.py
backend/infrastructure/llm/prompts/: answer_eval.py  evaluation.py  extraction.py  followup_gen.py  question_gen.py  report_gen.py
backend/infrastructure/llm/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
backend/infrastructure/parsers/: __init__.py  base.py  docx_parser.py  pdf_parser.py  text_parser.py
backend/infrastructure/storage/: minio_client.py
backend/tasks/: interview_tasks.py  resume_tasks.py
backend/tests/: conftest.py
backend/tests/integration/: test_interview_api.py
backend/tests/unit/: test_evaluation_agent.py  test_followup_agent.py  test_question_agent.py  test_report_agent.py
backend/workflow/: checkpointer.py  state.py
backend/workflow/graphs/: interview_graph.py
backend/workflow/nodes/: analyze_resume.py  decide_next.py  evaluate_answer.py  generate_questions.py  present_question.py
(+116 files in other folders)
